alignment issues for the button

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,12 @@ ngb-datepicker-popup{
 .w-200 {
     width: 98%;
 }
+
+
+.p-05{
+    margin: 5px !important;
+}
+
+label {
+    margin: 0px;
+}
